# python-crush

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.rst  ChangeLog  MANIFEST.in  README.rst  bootstrap  requirements-dev.txt  requirements-docs.txt  requirements.txt  run-tests.sh  setup.cfg  setup.py  tox.ini
crush/: __init__.py  _setup_hooks.py  analyze.py  ceph.py  compare.py  main.py  optimize.py
crush/ceph/: __init__.py  convert.py
crush/libcrush/: CMakeLists.txt  ceph_read_write.cc  ceph_read_write.h  convert.cc  convert.h  libcrush.c  libcrush.h  module.c  module.h
crush/libcrush/common/: buffer.cc
crush/libcrush/crush/: CrushCompiler.cc  CrushWrapper.cc  CrushWrapper.h
crush/libcrush/include/: buffer.h  denc.h  intarith.h
crush/libcrush/placeholders/include/: assert.h
docs/: api.rst  conf.py  crush.8  index.rst  quick.py
docs/_templates/: sidebarintro.html  sidebarlogo.html
docs/_themes/kr/: layout.html
docs/ceph/: optimize.rst
docs/dev/: hacking.rst
manylinux/: Dockerfile  build-wheels.sh
tests/: ineffective-failure-domain-crushmap.json  sample-bugous-crushmap.json  sample-ceph-crushmap-compat.python-json  sample-ceph-crushmap-compat.txt  sample-ceph-crushmap.crush  sample-ceph-crushmap.json  sample-ceph-crushmap.python-json  sample-ceph-crushmap.txt  sample-crushmap.json  test_analyze.py  test_ceph.py  test_ceph_analyze.py  test_ceph_compare.py  test_ceph_convert.py  test_ceph_crush.py  test_ceph_optimize.py  test_compare.py  test_convert.py  test_crush.py  test_crush_filter.json  test_libcrush.py  test_main.py  test_optimize.py  test_optimize_5.json  test_optimize_6.json  test_optimize_7.json  test_optimize_big_cluster.json  test_optimize_small_cluster.json  test_optimize_small_cluster_step_1.txt  weights-crushmap.json  weights.json
tests/ceph/: ceph-crushmap-rules-order.json  ceph-crushmap-rules-order.txt  ceph-report-compat-converted.txt  ceph-report-compat-hammer.json  ceph-report-compat-optimized.txt  ceph-report-compat-two-pools.json  ceph-report-compat.json  ceph-report-small.json  ceph-report.json  crushmap-from-ceph-report.json  dump.json  osdmap-invalid.json  osdmap.json  weights-notfloat.json
