#
# Interpreted by pbr
#   https://pypi.python.org/pypi/pbr
#   http://docs.openstack.org/developer/pbr/
#
[metadata]
name = crush
version = 1.0.0
summary = library to control placement in a hierarchy
description-file =
    README.rst
author = Loic Dachary
author-email = loic@dachary.org
home-page = http://libcrush.org/main/python-crush
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Utilities

[files]
scripts = 
  bin/crush
packages = crush

[build_sphinx]
all_files = 1
build-dir = build
source-dir = docs

[global]
setup-hooks =
    pbr.hooks.setup_hook

[extension=crush.libcrush]
sources = crush/libcrush/module.c
#optional = True

[build_ext]
#pre-hook.test_pre_hook = pbr_testpackage._setup_hooks.test_pre_hook
#post-hook.test_post_hook = pbr_testpackage._setup_hooks.test_post_hook
