#
# Interpreted by pbr
#   https://pypi.python.org/pypi/pbr
#   http://docs.openstack.org/developer/pbr/
#
[metadata]
name = crush
version = 1.0.6
summary = library to control placement in a hierarchy
description-file =
    README.rst
author = Loic Dachary
author-email = loic@dachary.org
home-page = http://libcrush.org/main/python-crush
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Utilities

[files]
scripts = 
  bin/crush
packages = crush

[build_sphinx]
all_files = 1
build-dir = build
source-dir = docs

[global]
setup-hooks =
    pbr.hooks.setup_hook

[extension=crush.libcrush]
# the source found in libcrush are copied over by build_pre_hook
# from the submodule
libcrush_cmake =
    crush/libcrush/config-h.in.cmake

libcrush_headers =
    crush/libcrush/builder.h
    crush/libcrush/crush_compat.h
    crush/libcrush/crush_ln_table.h
    crush/libcrush/crush.h
    crush/libcrush/hash.h
    crush/libcrush/int_types.h
    crush/libcrush/mapper.h
    crush/libcrush/types.h

sources =
    crush/libcrush/module.c
    crush/libcrush/libcrush.c    
    crush/libcrush/mapper.c
    crush/libcrush/builder.c
    crush/libcrush/hash.c
    crush/libcrush/crush.c

[build_ext]
# populate crush/libcrush with files from libcrush/crush
# as required by sources & libcrush_headers above
pre-hook.build_post_hook = crush._setup_hooks.build_pre_hook
post-hook.build_post_hook = crush._setup_hooks.build_post_hook

[flake8]
max-line-length = 100
