#
# Interpreted by pbr
#   https://pypi.python.org/pypi/pbr
#   http://docs.openstack.org/developer/pbr/
#
[metadata]
name = crush
version = 1.0.36
summary = library to control placement in a hierarchy
description-file =
    README.rst
author = Loic Dachary
author-email = loic@dachary.org
home-page = http://libcrush.org/main/python-crush
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Utilities

[files]
scripts = 
  bin/crush
packages = crush

[build_sphinx]
all_files = 1
build-dir = build
source-dir = docs
warning-is-error = 1

[global]
setup-hooks =
    pbr.hooks.setup_hook

[extension=crush.libcrush]

extra_compile_args = -std=c++11

define_macros = __STANDALONE_CRUSH__

# /usr/include/boost148 is for manylinux/build-wheels.sh on CentOS 5
include_dirs =
     /usr/include/boost148
     crush/libcrush
     crush/libcrush/crush
     crush/libcrush/placeholders

sources =
     crush/libcrush/module.c
     crush/libcrush/libcrush.c    
     crush/libcrush/ceph_read_write.cc
     crush/libcrush/crush/crush.c
     crush/libcrush/crush/builder.c
     crush/libcrush/crush/mapper.c
     crush/libcrush/crush/hash.c
     crush/libcrush/crush/CrushCompiler.cc
     crush/libcrush/crush/CrushWrapper.cc
     crush/libcrush/common/errno.cc
     crush/libcrush/common/buffer.cc
     crush/libcrush/common/safe_io.c
     crush/libcrush/common/armor.c
     crush/libcrush/common/escape.c
     crush/libcrush/common/page.cc
     crush/libcrush/common/Formatter.cc
     crush/libcrush/common/HTMLFormatter.cc
     crush/libcrush/common/mempool.cc
     crush/libcrush/common/strtol.cc

[build_ext]
# populate crush/libcrush with files from libcrush/crush
# as required by sources & libcrush_headers above
pre-hook.build_post_hook = setup._setup_hooks.build_pre_hook
post-hook.build_post_hook = setup._setup_hooks.build_post_hook

[flake8]
max-line-length = 100
